--- a/JCashMachineThailand/JCashMachineThailand.csproj
+++ b/JCashMachineThailand/JCashMachineThailand.csproj
@@ -171,7 +171,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Images\bg.jpg" />
+    <Content Include="Images\career.jpg" />
+    <Content Include="Images\JCM-Global-logo.ico" />
     <Content Include="Images\JCM_Global_RGB - email signature.png" />
+    <Content Include="Images\product.jpg" />
+    <Content Include="Images\service.jpg" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
