--- a/JCashMachineThailand/JCashMachineThailand.csproj
+++ b/JCashMachineThailand/JCashMachineThailand.csproj
@@ -150,9 +150,11 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\DetailsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ModelDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -162,6 +164,7 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\custom.details.css" />
     <Content Include="Content\custom.index.css" />
     <Content Include="Content\custom.layout.css" />
     <Content Include="favicon.ico" />
@@ -174,7 +177,17 @@
     <Content Include="Images\career.jpg" />
     <Content Include="Images\JCM-Global-logo.ico" />
     <Content Include="Images\JCM_Global_RGB - email signature.png" />
+    <Content Include="Images\product-header.jpg" />
     <Content Include="Images\product.jpg" />
+    <Content Include="Images\products\dbv400.png" />
+    <Content Include="Images\products\dbv500.png" />
+    <Content Include="Images\products\ipro-rc.png" />
+    <Content Include="Images\products\ipro-ss.png" />
+    <Content Include="Images\products\ivizion.png" />
+    <Content Include="Images\products\pub.png" />
+    <Content Include="Images\products\tbv.png" />
+    <Content Include="Images\products\vega.png" />
+    <Content Include="Images\service-header.jpg" />
     <Content Include="Images\service.jpg" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -281,6 +294,7 @@
     <Content Include="Content\bootstrap\bootstrap.scss" />
     <Content Include="Content\bootstrap\bootstrap-reboot.scss" />
     <Content Include="Content\bootstrap\bootstrap-grid.scss" />
+    <None Include="Properties\PublishProfiles\JCashMachineThailand.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -323,10 +337,12 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Details\Products.cshtml" />
+    <Content Include="Views\Details\Service.cshtml" />
+    <Content Include="Views\Details\Career.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
