--- a/JCashMachineThailand/Web.config
+++ b/JCashMachineThailand/Web.config
@@ -4,11 +4,24 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <system.net>
+    <mailSettings>
+      <smtp from="admin@jcm-thai.co.th">
+        <network host="smtp.jcm-thai.co.th"
+                 port="587"
+                 enableSsl="false"
+                 userName="admin@jcm-thai.co.th"
+                 password="jcmT2007"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ContactEmailTo" value="support@jcm-thai.co.th"/>
+    <add key="ContactEmailCc" value="t.sarawoot@jcm-thai.co.th"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
